# bagel_qdp

./: COPYING  ChangeLog  ChangeLog.html  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  bagel-qdp-config.in  configure  configure.ac  index.html  params.json
code_gen/: Makefile.am  Makefile.in  write_local_sumsq.cc  write_local_vcdot.cc  write_local_vcdot_real.cc  write_su3_ma.cc  write_su3_mm.cc  write_su3_mm_peq.cc  write_vadd.cc  write_vadd_chproj.cc  write_vag5xpby.cc  write_vaxpbg5iy.cc  write_vaxpbg5y.cc  write_vaxpby.cc  write_vaxpby_chproj.cc  write_vaxpy.cc  write_vaxpy_chproj.cc  write_vg5axpby.cc  write_vscal.cc  write_vscal_chproj.cc  write_vscal_g5.cc  write_vxpag5iy.cc  write_vxpag5y.cc  write_vxpay_chproj.cc
lib/: Makefile.am  Makefile.in  bagel_qdp.h  bagel_qdp_options.h  bagel_qdp_options_internal.h.in
tests/: Makefile.am  Makefile.in  t_blas.cc
